# smart-chatbot

./: .env.development  .env.example  .env.production  .env.staging  .gitignore  DOCKER_SETUP.md  Dockerfile  LICENSE  Makefile  README.md  daily_log.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/data/: training_data.py
app/models/: conversation_manager.py  database.py  information_extractor.py  nlp_engine.py  smart_models.py
app/utils/: config.py  test_config.py  test_formatter.py  test_logging.py
archive/: daily_log.md
docs/: nlp_concepts_docs.md  professional_workflow_guide.md
frontend/: config.js  index.html
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: build-frontend-config.py  init-db.sql
