[project]
name = "smart-chatbot"
version = "0.1.0"
requires-python = ">=3.11, <3.12"
dependencies = [
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "spacy>=3.7.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
